# queryfolio

./: .gitignore  AGENTS.md  README.md  config.example.yaml  package.json  pnpm-lock.yaml
.claude/skills/publish-macos-release/: SKILL.md
.github/workflows/: build-macos.yml  release.yml
docs/: settings.md
fabfile/: __init__.py
scripts/: release.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  db.rs  error.rs  folder_meta.rs  history.rs  lib.rs  main.rs  meta_commands.rs  query_files.rs  router.rs  schema_info.rs  settings.rs  tunnel.rs
src/lib/: api.ts  editableResult.ts  export.ts  lineReplace.ts  mergeText.ts  sqlFormat.ts
src/lib/components/: AiAnalysisModal.svelte  CellInspector.svelte  ConfigEditorModal.svelte  ConfigInfoModal.svelte  ConnectionsPane.svelte  DangerousConfirmModal.svelte  EditorTabs.svelte  EditorToolbar.svelte  FilesPane.svelte  HistoryPane.svelte  PaneDivider.svelte  ReplaceMultilinePane.svelte  ResultsPane.svelte  SearchModal.svelte  SettingsModal.svelte  SqlEditor.svelte  TablesPane.svelte  Toolbar.svelte
src/lib/stores/: app.svelte.ts
src/routes/: +layout.svelte  +page.svelte
