[package]
name = "queryfolio"
version = "0.1.0"
description = "A SQL client desktop app"
authors = ["ytyng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "queryfolio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "mysql",
  "postgres",
  "sqlite",
  "chrono",
  "json",
  "rust_decimal",
  "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
uuid = { version = "1", features = ["serde"] }
dirs = "6"
shlex = "1"
thiserror = "2"
ssh2 = "0.9"
base64 = "0.22"
futures = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"

