[package]
name = "queryfolio"
version = "0.1.0"
description = "A SQL client desktop app"
authors = ["ytyng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "queryfolio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "mysql",
  "postgres",
  "sqlite",
  "chrono",
  "json",
  "rust_decimal",
  "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
uuid = { version = "1", features = ["serde"] }
dirs = "6"
glob = "0.3"
shlex = "1"
# AI (OpenAI API) 呼び出し用。openssl 依存を避けるため rustls を使う
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
thiserror = "2"
# vendored-openssl: OpenSSL を静的リンクする。Homebrew の libssl を動的リンクすると
# Developer ID 署名アプリで library validation により起動時 abort するため
# (異なる Team ID の dylib はロード不可)。副次的に Homebrew 未導入環境でも動く。
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
base64 = "0.22"
futures = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3"

